--- a/src/assets/sass/utils/variables.scss
+++ b/src/assets/sass/utils/variables.scss
@@ -80,6 +80,9 @@ $height-responsive-cta-icon1: clamp(1rem, 4vw, 2rem);
 
 $left-padding-hero1: 4vw;
 
+$rows-translate-Y1: -10vw;
+$rows-translate-Y2: 15vw;
+
 // -----colors test-----
 
 $color-test1: red;
